--- a/views/custom-templates/interactive-industry-map.html.twig
+++ b/views/custom-templates/interactive-industry-map.html.twig
@@ -7,7 +7,7 @@
 {% block body_content %}
     <div class="container-fluid">
         <article class="row post-type-{{ post.post_type }}" id="post-{{ post.ID }}">
-            <section class="col-12">
+            <section class="col-12 m-0 p-0">
                 <div class="ratio ratio-21x9">
                     {% apply shortcodes %}
                         [leaflet-map]
