--- a/views/custom-templates/industry-materials.html.twig
+++ b/views/custom-templates/industry-materials.html.twig
@@ -3,13 +3,6 @@
 {# Page with list of industry materials. #}
 
 {% block article_content %}
-    {% if (post.content|default and post.content|length > 0) or (content|default and content|length > 0) %}
-        <section class="row my-5">
-            <div class="col-12">
-                {{ post.content|default(content|default) }}
-            </div>
-        </section>
-    {% endif %}
     {% for element in elements %}
         <section class="row my-5">
             <div class="col-12 col-md-8 col-lg-9 d-flex align-items-start flex-column py-1">
@@ -23,11 +16,22 @@
                     [<a href="{{ element.link }}" title="{{ element.title }}">více informací</a>]
                 </nav>
             </div>
-            <div class="col-12 col-md-4 col-lg-3 d-flex flex-column justify-content-center">
-                <a href="{{ element.link }}" title="{{ element.title }}">
-                    <img class="d-block w-100 mh-100 p-2 img-thumbnail" src="{{ element.thumbnail.src }}" alt="{{ element.thumbnail.alt }}">
-                </a>
-            </div>
+            {% if post.meta('_material_image').src|default %}
+                <div class="col-12 col-md-4 col-lg-3 d-flex flex-column justify-content-center">
+                    <a href="{{ element.link }}" title="{{ element.title }}">
+                        <img class="d-block w-100 mh-100 p-2 img-thumbnail"
+                             src="{{ get_image(post.meta('_material_image')).src }}"
+                             alt="{{ get_image(post.meta('_material_image')).alt }}">
+                    </a>
+                </div>
+            {% endif %}
         </section>
     {% endfor %}
+    {% if (post.content|default and post.content|length > 0) or (content|default and content|length > 0) %}
+        <section class="row my-5">
+            <div class="col-12">
+                {{ post.content|default(content|default) }}
+            </div>
+        </section>
+    {% endif %}
 {% endblock article_content %}
