--- a/views/single-customs/single-surovina-chemickeho-prumyslu.html.twig
+++ b/views/single-customs/single-surovina-chemickeho-prumyslu.html.twig
@@ -3,7 +3,7 @@
 {% block article_header %}
     {% include 'post-parts/layout/main-banner-row.html.twig'
         with {
-        image: (post.meta('_material_image').src|default(post.thumbnail)),
+        image: get_image(post.meta('_material_image')).src|default(post.thumbnail),
         title: post ? post.title : 'Stránka nenalezena'
     } %}
 {% endblock %}
