--- a/views/post-types/single-map_company.html.twig
+++ b/views/post-types/single-map_company.html.twig
@@ -5,11 +5,11 @@
         <div class="col border border-5 border-dark p-3 pb-0 m-2 text-justify">
             <p>{{ post.post_excerpt|default }}</p>
         </div>
-        {% if post.meta('_company_logo').src|default %}
+        {% if get_image(post.meta('_company_logo')).src|default %}
             <div class="col-12 col-md-4 col-lg-3 d-flex flex-column justify-content-center">
                 <img class="d-block w-100 mh-100 p-2 img-thumbnail"
-                     src="{{ get_image(company.meta('_company_logo')).src }}"
-                     alt="{{ get_image(company.meta('_company_logo')).alt }}">
+                     src="{{ get_image(post.meta('_company_logo')).src }}"
+                     alt="{{ get_image(post.meta('_company_logo')).alt }}">
             </div>
         {% endif %}
     </section>
