Did some changes based on updated specification.

--- a/views/post-types/teach_material.html.twig
+++ b/views/post-types/teach_material.html.twig
@@ -1,4 +1,7 @@
 {% extends "post-types/page.html.twig" %}
 
-
+{% block page_content %}
+    <!-- Oblast: {{ context.subtype|default('neuvedena') }} -->
+    {{ parent() }}
+{% endblock %}
 
