--- a/views/post-types/teach_material_cat.html.twig
+++ b/views/post-types/teach_material_cat.html.twig
@@ -3,6 +3,7 @@
 {# Page with list of teaching materials. #}
 
 {% block article_content %}
+    <!-- Oblast: {{ context.subtype|default('neuvedena') }} -->
     {% if (post.content|default and post.content|length > 0) or (content|default and content|length > 0) %}
         <section class="row my-3">
             <div class="col-12">
