--- a/views/post-types/teach_material_cat.html.twig
+++ b/views/post-types/teach_material_cat.html.twig
@@ -21,12 +21,23 @@
                     {{ material.content }}
                 </div>
             </div>
-            <div class="col-12 col-md-4 col-lg-3 d-flex flex-column justify-content-center">
+            <div class="col-12 col-md-4 col-lg-3 d-flex flex-column justify-content-center order-lg-first">
                 {% set image_src = material.thumbnail.src|default(get_image(material.meta('_menu_image')).src|default) %}
                 {% if image_src|default and image_src|length > 0 %}
                     <a href="{{ material.link }}" title="{{ material.title }}">
                         <img class="d-block w-100 mh-100 p-2 img-thumbnail" src="{{ image_src }}" alt="{{ material.thumbnail.alt }}">
                     </a>
+                {% endif %}
+                {% if post.documents|default|length > 0 %}
+                    <ul>
+                        {% for document in post.documents %}
+                            <li>
+                                <a href="#">
+                                    {{ document.name }}
+                                </a>
+                            </li>
+                        {% endfor %}
+                    </ul>
                 {% endif %}
             </div>
         </section>
