--- a/views/post-types/teach_material_cat.html.twig
+++ b/views/post-types/teach_material_cat.html.twig
@@ -28,6 +28,7 @@
                         <img class="d-block w-100 mh-100 p-2 img-thumbnail" src="{{ image_src }}" alt="{{ material.thumbnail.alt }}">
                     </a>
                 {% endif %}
+                {{ dump(material.documents) }}
                 {% if material.documents|default|length > 0 %}
                     <ul>
                         {% for document in material.documents %}
