Did some changes based on updated specification.

--- a/views/post-types/teach_material_cat.html.twig
+++ b/views/post-types/teach_material_cat.html.twig
@@ -11,7 +11,6 @@
             </div>
         </section>
     {% endif %}
-    {{ dump(materials) }}
     {% for material in materials %}
         <section class="row my-5">
             <div class="col-12 col-md-8 col-lg-9 d-flex align-items-start flex-column">
@@ -29,6 +28,7 @@
                         <img class="d-block w-100 mh-100 p-2 img-thumbnail" src="{{ image_src }}" alt="{{ material.thumbnail.alt }}">
                     </a>
                 {% endif %}
+                {{ dump(material.meta('_documents')) }}
                 <ul>
                     {% for document in material.documents %}
                         <li>
