Did some changes based on updated specification.

--- a/views/post-types/teach_material_cat.html.twig
+++ b/views/post-types/teach_material_cat.html.twig
@@ -11,7 +11,7 @@
             </div>
         </section>
     {% endif %}
-    {{ dump(subtype) }}
+    {% dump(materials) %}
     {% for material in materials %}
         <section class="row my-5">
             <div class="col-12 col-md-8 col-lg-9 d-flex align-items-start flex-column">
