Did some changes based on updated specification.

--- a/views/post-types/teach_material.html.twig
+++ b/views/post-types/teach_material.html.twig
@@ -1,6 +1,7 @@
 {% extends "post-types/page.html.twig" %}
 
 {% block article_content %}
+    <!-- VYUKOVY MATERIAL -->
     {% if (post.content|default and post.content|length > 0) or (content|default and content|length > 0) %}
         <div class="row my-5">
             <div class="col-12">
