Did some changes based on updated specification.

--- a/views/post-types/teach_material.html.twig
+++ b/views/post-types/teach_material.html.twig
@@ -15,7 +15,7 @@
                 {% for document in post.documents %}
                     <li>
                         <a href="#">
-                            {{ document.name }}
+                            odkaz
                         </a>
                     </li>
                 {% endfor %}
