Did some changes based on updated specification.

--- a/views/post-types/teach_material.html.twig
+++ b/views/post-types/teach_material.html.twig
@@ -12,7 +12,7 @@
     <div class="row my-5">
         <div class="col-12">
             <ul>
-                {% for document in post.documents %}
+                {% for item in post.files %}
                     <li>
                         <a href="#">
                             odkaz
