Did some changes based on updated specification.

--- a/views/post-types/teach_material.html.twig
+++ b/views/post-types/teach_material.html.twig
@@ -15,7 +15,7 @@
                 {% for item in post.files %}
                     <li>
                         <a href="#">
-                            odkaz
+                            {{ item.file_name }}
                         </a>
                     </li>
                 {% endfor %}
