Did some changes based on updated specification.

--- a/views/post-types/single-map_company.html.twig
+++ b/views/post-types/single-map_company.html.twig
@@ -15,6 +15,7 @@
     </section>
 
     <section class="row my-3">
+        {{ dump(post-locations) }}
         {% if post.locations|length > 0 %}
             <div class="col-12 col-lg-6">
                 <h3>Provozovny</h3>
