--- a/views/post-types/teach_material.html.twig
+++ b/views/post-types/teach_material.html.twig
@@ -16,7 +16,7 @@
                 <ul>
                     {% for document in post.documents %}
                         <li class="text-uppercase">
-                            <strong>{{ document.document_name }}</strong>: {{ document.document_file }}
+                            <strong>{{ document.document_name }}</strong>: {{ get_file(document.document_file).src }}
                         </li>
                     {% endfor %}
                 </ul>
