--- a/views/post-types/teach_material.html.twig
+++ b/views/post-types/teach_material.html.twig
@@ -16,9 +16,11 @@
                 <ul>
                     {% for document in post.documents %}
                         <li class="text-uppercase">
-                            <a href="{{ get_attachment(document.document_file).link }}" target="_blank">
-                                {{ document.document_name }}
-                            </a>
+                            <strong>
+                                <a href="{{ get_attachment(document.document_file).link }}" target="_blank">
+                                    {{ document.document_name }}
+                                </a>
+                            </strong>
                         </li>
                     {% endfor %}
                 </ul>
