--- a/views/post-types/teach_material_cat.html.twig
+++ b/views/post-types/teach_material_cat.html.twig
@@ -30,11 +30,13 @@
                     </a>
                 {% endif %}
                 <ul>
-                    {% for document in material.documents %}
-                        <li>
-                            <a href="#">
-                                {{ document.name }}
-                            </a>
+                    {% for document in post.documents %}
+                        <li class="text-uppercase">
+                            <strong>
+                                <a href="{{ get_attachment(document.document_file).link }}" target="_blank">
+                                    {{ document.document_name }}
+                                </a>
+                            </strong>
                         </li>
                     {% endfor %}
                 </ul>
