--- a/views/post-types/teach_material_cat.html.twig
+++ b/views/post-types/teach_material_cat.html.twig
@@ -29,19 +29,15 @@
                         <img class="d-block w-100 mh-100 p-2 img-thumbnail" src="{{ image_src }}" alt="{{ material.thumbnail.alt }}">
                     </a>
                 {% endif %}
-                {% if material.documents|length > 0 %}
-                    <ul>
-                        {% for document in material.documents %}
-                            <li class="text-uppercase">
-                                <strong>
-                                    <a href="{{ get_attachment(document.document_file).link }}" target="_blank">
-                                        {{ document.document_name }}
-                                    </a>
-                                </strong>
-                            </li>
-                        {% endfor %}
-                    </ul>
-                {% endif %}
+                {% for document in material.documents %}
+                    <p class="text-center">
+                        <strong>
+                            <a href="{{ get_attachment(document.document_file).link }}" target="_blank">
+                                {{ document.document_name }}
+                            </a>
+                        </strong>
+                    </p>
+                {% endfor %}
             </div>
         </section>
     {% endfor %}
