Did some changes based on updated specification.

--- a/views/post-types/teach_material_cat.html.twig
+++ b/views/post-types/teach_material_cat.html.twig
@@ -31,11 +31,13 @@
                 {% endif %}
                 {% for document in material.documents %}
                     <p class="text-center">
-                        <strong>
+                        <small>
+                            <strong>
                             <a href="{{ get_attachment(document.document_file).link }}" target="_blank">
                                 {{ document.document_name }}
                             </a>
                         </strong>
+                        </small>
                     </p>
                 {% endfor %}
             </div>
