--- a/views/post-types/teach_material.html.twig
+++ b/views/post-types/teach_material.html.twig
@@ -17,7 +17,7 @@
                     {% for document in post.documents %}
                         <li>
                             <strong>
-                                <a href="{{ get_attachment(document.document_file).link }}" target="_blank">
+                                <a href="{{ get_attachment(document.document_file).src }}" target="_blank">
                                     {{ document.document_name }}
                                 </a>
                             </strong>
