--- a/views/post-types/teach_material_cat.html.twig
+++ b/views/post-types/teach_material_cat.html.twig
@@ -31,7 +31,7 @@
                 {% endif %}
                 {% for document in material.documents %}
                     <p class="text-center">
-                        <a href="{{ get_attachment(document.document_file).link }}" target="_blank">
+                        <a href="{{ get_attachment(document.document_file).src }}" target="_blank">
                             <strong><small>{{ document.document_name }}</small></strong>
                         </a>
                     </p>
