--- a/views/post-types/teach_material.html.twig
+++ b/views/post-types/teach_material.html.twig
@@ -4,7 +4,7 @@
     <!-- VYUKOVY MATERIAL -->
     {% if (post.content|default and post.content|length > 0) or (content|default and content|length > 0) %}
         <div class="row my-5">
-            <div class="col-12">
+            <div class="col-12 text-justify">
                 {{ post.content|default(content|default) }}
             </div>
         </div>
