--- a/views/custom-templates/teach_material_cat_photos.html.twig
+++ b/views/custom-templates/teach_material_cat_photos.html.twig
@@ -11,6 +11,7 @@
 
         <div class="row my-5">
             {% for oneSubType in subtypes %}
+                <!-- ONE SUBTYPE -->
                 {% if subtype == oneSubType %}
                     <div class="col-auto bg-light text-primary border border-1 border-dark">
                         {{ oneSubType }}
