Did some changes based on updated specification.

--- a/views/custom-templates/teach_material_cat_photos.html.twig
+++ b/views/custom-templates/teach_material_cat_photos.html.twig
@@ -10,9 +10,9 @@
         </div>
 
         <div class="row my-5">
-            {% for oneSubType in subtypes %}
+            {% for oneSubType in post.subtypes %}
                 <!-- ONE SUBTYPE -->
-                {% if subtype == oneSubType %}
+                {% if post.subtype == oneSubType %}
                     <div class="col-auto bg-light text-primary border border-1 border-dark">
                         {{ oneSubType }}
                     </div>
