Did some changes based on updated specification.

--- a/views/custom-templates/teach_material_cat_photos.html.twig
+++ b/views/custom-templates/teach_material_cat_photos.html.twig
@@ -1,7 +1,10 @@
 {% extends "post-types/page.html.twig" %}
 
 {% block article_content %}
-    <!-- FOTOGRAFIE -->
+    <!--
+    FOTOGRAFIE
+    {{ post.terms({taxonomy: 'teach_mat_sub_type'})|join(', ') }}
+     -->
     {% if (post.content|default and post.content|length > 0) or (content|default and content|length > 0) %}
         <div class="row my-5">
             <div class="col-12">
