--- a/views/custom-templates/teach_material_cat_photos.html.twig
+++ b/views/custom-templates/teach_material_cat_photos.html.twig
@@ -1,41 +1,48 @@
 {% extends "post-types/page.html.twig" %}
 
 {% block article_content %}
-    {% if (post.content|default and post.content|length > 0) or (content|default and content|length > 0) %}
-        <div class="row my-5">
-            <div class="col-12">
-                {{ post.content|default(content|default) }}
-            </div>
+    <div class="row my-5">
+        <div class="col-12">
+            {{ post.content|default(content|default) }}
         </div>
+    </div>
 
-        <div class="row my-5">
-            {% for oneSubType in post.terms({taxonomy: 'teach_mat_sub_type'}) %}
-                <a class="d-block col-auto bg-light text-primary border border-1 border-dark" href="?oblast={{ oneSubType }}">
+    <div class="row my-5">
+        {{ dump(subtypes) }}
+        {{ dump(subtype) }}
+        {% for oneSubType in subtypes %}
+            <!-- ONE SUBTYPE -->
+            {% if subtype == oneSubType %}
+                <div class="col-auto bg-light text-primary border border-1 border-dark">
                     {{ oneSubType }}
-                </a>
-            {% endfor %}
-        </div>
+                </div>
+            {% else %}
+                <div class="col-auto bg-primary text-light border border-1 border-dark">
+                    {{ oneSubType }}
+                </div>
+            {% endif %}
+        {% endfor %}
+    </div>
 
-        <div class="row my-5">
-            {% for material in materials %}
-                <article class="col-12 col-sm-6 col-md-4 col-lg-3">
-                    <a class="card border-0 h-100 text-dark text-decoration-none" href="{{ material.path }}">
-                        {% set image_src = material.thumbnail.src|default(get_image(material.meta('_menu_image')).src|default) %}
-                        {% if image_src|default and image_src|length > 0 %}
-                            <div class="ratio ratio-16x9 card-img-top mx-auto mt-4">
-                                <img class="d-block w-100 mh-100 p-2 img-thumbnail" src="{{ image_src }}" alt="{{ material.thumbnail.alt }}">
-                            </div>
-                        {% endif %}
-                        <div class="card-body d-flex flex-column">
-                            <h5 class="card-title">
-                                {{ post.title }}
-                            </h5>
+    <div class="row my-5">
+        {% for material in materials %}
+            <article class="col-12 col-sm-6 col-md-4 col-lg-3">
+                <a class="card border-0 h-100 text-dark text-decoration-none" href="{{ material.path }}">
+                    {% set image_src = material.thumbnail.src|default(get_image(material.meta('_menu_image')).src|default) %}
+                    {% if image_src|default and image_src|length > 0 %}
+                        <div class="ratio ratio-16x9 card-img-top mx-auto mt-4">
+                            <img class="d-block w-100 mh-100 p-2 img-thumbnail" src="{{ image_src }}" alt="{{ material.thumbnail.alt }}">
                         </div>
-                    </a>
-                </article>
-            {% endfor %}
-        </div>
-    {% endif %}
+                    {% endif %}
+                    <div class="card-body d-flex flex-column">
+                        <h5 class="card-title">
+                            {{ post.title }}
+                        </h5>
+                    </div>
+                </a>
+            </article>
+        {% endfor %}
+    </div>
 {% endblock article_content %}
 
 {% block article_signpost %}
